infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration # Match with 'matchLabels.app'
    spec:
      containers:
        - name: expiration # Mainly for logging purposes
          image: 1997rishabhsingh/expiration
