infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client # Match with 'matchLabels.app'
    spec:
      containers:
        - name: client # Mainly for logging purposes
          image: 1997rishabhsingh/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client # Match with 'spec.selector.template.metadata.labels.app'
  type: ClusterIP # Can be omitted since its default
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
