infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders # Match with 'matchLabels.app'
    spec:
      containers:
        - name: orders # Mainly for logging purposes
          image: 1997rishabhsingh/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders # Match with 'spec.selector.template.metadata.labels.app'
  type: ClusterIP # Can be omitted since its default
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
