infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments # Match with 'matchLabels.app'
    spec:
      containers:
        - name: payments # Mainly for logging purposes
          image: 1997rishabhsingh/payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments # Match with 'spec.selector.template.metadata.labels.app'
  type: ClusterIP # Can be omitted since its default
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
